some artist info

--- a/src/pages/artists/aj834.md
+++ b/src/pages/artists/aj834.md
@@ -5,3 +5,7 @@ image: /images/artists/ajpfp.jpg
 volumes: [2]
 layout: ../../layouts/ArtistBioLayout.astro
 ---
+
+# You can find Aj834 on:
+
+- [Twitter](https://twitter.com/aj8340)
