--- a/src/pages/artists/c0d3.md
+++ b/src/pages/artists/c0d3.md
@@ -5,3 +5,7 @@ image: /images/artists/defaultpfp.jpg
 volumes: [3]
 layout: ../../layouts/ArtistBioLayout.astro
 ---
+
+# We aren't sure where to find C0D3
+
+Help contribute information by editing this page!
